--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,9 @@
+body {
+    background: rgb(44, 89, 225);
+    padding: 0 1em;
+    font-family: Arial;
+}
+
 .container {
     display: grid;
     justify-content: space-between;
@@ -5,4 +11,31 @@
     grid-template-rows: repeat(4, 1fr);
     column-gap: 1%;
     row-gap: 2%;
+}
+
+section {
+    background: white;
+    border-radius: 1em;
+    padding: 0 1em;
+}
+
+#temperature-block {
+    grid-column: 1;
+    grid-row: 2;
+}
+
+#sky-block {
+    grid-column: 1;
+    grid-row: 3;
+}
+
+#city-name-block {
+    grid-column: 1;
+    grid-row: 4;
+}
+
+#weather-garden-block {
+    grid-column: 2;
+    grid-row: 2 / span 3;
+    background: rgb(180, 235, 253);
 }
