--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,7 @@
+/***********************/
+/*** GENERAL STYLING ***/
+/***********************/
+
 body {
     background: rgb(44, 89, 225);
     padding: 0 1em;
@@ -41,6 +45,28 @@ section {
 #temperature-block {
     grid-column: 1;
     grid-row: 2;
+}
+
+#temp {
+    color: orange;
+}
+
+#up-arrow {
+    /* Syling credit: https://css-tricks.com/snippets/css/css-triangle/ */
+    width: 0px;
+    height: 0px;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 10px solid black;
+}
+  
+#down-arrow {
+    /* Syling credit: https://css-tricks.com/snippets/css/css-triangle/ */
+    width: 0px;
+    height: 0px;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 10px solid black;
 }
 
 /*****************/
