--- a/styles/index.css
+++ b/styles/index.css
@@ -9,11 +9,13 @@ h1 {
 }
 
 header {
-    background-color: #666;
+    background-image: url('/images/banner.jpg');
+    background-size: cover;
     padding: 10px;
     text-align: center;
     font-size: 20px;
-    color: white;
+    color: rgba(255, 255, 255, 0.66);
+    text-shadow: rgba(0, 0, 0, 0.262) 0.3em 0.3em 0.2em;
     height: 100px;
 }
 
@@ -25,7 +27,7 @@ section {
 
 sidebar {
     display: flex;
-    background: #ccc;
+    background: rgb(255, 255, 255);
     padding: 30px;
     align-items: center;
     justify-content: center;
@@ -41,7 +43,9 @@ sidebar {
     height: 200px;
     margin: 20px;
     justify-self: center;
-    background-color: white;
+    background-color: rgb(167, 221, 250);
+    color: white;
+    text-shadow: rgba(0, 0, 0, 0.406) 0.3em 0.3em 0.2em;
     border-radius: 10px;
     text-align:center;
     line-height: 50px;
@@ -51,7 +55,7 @@ sidebar {
 information {
     display: flex;
     flex: 2;
-    background: rgb(225, 40, 40);
+    background: rgb(255, 255, 255);
     align-items: center;
     justify-content: center;
 }
@@ -63,19 +67,21 @@ information {
 }
 
 .information-obj {
-    width: 300px;
-    height: 200px;
-    background-color: white;
+    width: 600px;
+    height: 300px;
+    background-color: rgb(167, 221, 250);
+    color: white;
+    text-shadow: rgba(0, 0, 0, 0.406) 0.3em 0.3em 0.2em;
     border-radius: 10px;
     text-align:center;
     line-height: 50px;
 }
 
 footer {
-    background-color: #777;
+    background-color: rgba(f,f,f, 0);
     padding: 10px;
     text-align: center;
-    color: white;
+    color: rgb(0, 0, 0);
     position: fixed;
     bottom: 0;
     width: 100%;
