--- a/styles/index.css
+++ b/styles/index.css
@@ -123,3 +123,109 @@ h4 {
     margin-top: 20px;
     border-radius: 10px;
 }
+
+#sky, #garden {
+    font-size: 1.5em;
+}
+
+/* MEDIA QUERIES */
+@media only screen and (min-width: 473px) {
+    #changeTemp {
+        display: initial;
+    }
+
+    #tempControls {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 10px;
+        margin-top: 20px;
+        margin-bottom: 5px;
+    }
+    .tempControl {
+        display: inline;
+        height: 50px;
+        font-size: 1em;
+    }
+
+    #sky, #garden {
+        font-size: 1.5em;
+    }
+}
+
+@media only screen and (min-width: 547px) {
+    h1 {
+        font-size: 2.8em;
+    }
+
+    h4 {
+        font-size: 2em;
+        padding: 20px;
+    }
+
+    form > * {
+        font-size: 1.1em;
+    }
+
+    #changeCity {
+        display: inline;
+        margin-bottom: 0;
+    }
+
+    #resetButton {
+        width: 20%;
+        padding: 5px 10px;
+    }
+
+    #tempControls {
+        margin-top: 7px;
+    }
+
+    #temp {
+        height: 175px;
+        font-size: 3.2em;
+    }
+}
+
+@media only screen and (min-width: 850px) {
+    main {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 2fr;
+        gap: 50px;
+    }
+
+    #resetButton {
+        display: inline;
+        width: initial;
+        padding-top: initial;
+        padding-bottom: initial;
+        padding-left: 5px;
+        padding-right: 5px;
+        margin-left: 10px;
+    }
+
+    #temp {
+        height: 150px;
+        padding: 25px 10px;
+    }
+
+    #tempControls {
+        margin-top: 15px;
+    }
+
+    .tempControl {
+        height: 65px;
+    }
+
+    #landscape {
+        height: 173px;
+    }
+
+    #sky, #garden {
+        font-size: 2em;
+    }
+
+    select {
+        font-size: 1em;
+    }
+}
