--- a/styles/index.css
+++ b/styles/index.css
@@ -128,6 +128,10 @@ h4 {
     font-size: 1.5em;
 }
 
+.fas {
+    font-size: 1.2em;
+}
+
 /* MEDIA QUERIES */
 @media only screen and (min-width: 473px) {
     #changeTemp {
@@ -149,6 +153,10 @@ h4 {
 
     #sky, #garden {
         font-size: 1.5em;
+    }
+
+    .fas {
+        padding-right: 10px;
     }
 }
 
