--- a/styles/index.css
+++ b/styles/index.css
@@ -20,7 +20,7 @@ body {
 h1 {
     margin-right: 1vw;
     font-size: 300%;
-    align-self: baseline;
+    align-self:baseline;
     margin-left: 2vw;
 }
 
@@ -56,7 +56,7 @@ h3 {
 }
 
 .arrow {
-    font-size: 35pt;
+    font-size:4vh;
     margin-left: 2vw;
 }
 
@@ -69,7 +69,7 @@ h3 {
 }
 
 #temp {
-    background-color: green;
+    /* background-color: green; */
     grid-row-start: 2;
     grid-row-end: 4;
     /* Need to get it to be centered horizontally */
@@ -77,14 +77,42 @@ h3 {
     font-size: 400%;
 }
 
+#skyBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+select, input {
+    width: 7vw;
+    margin-left: 2vw;
+    height: 16pt;
+}
+
+#cityBox, #cityFirstHalfBox {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+}
+
+#citySecondHalfBox {
+    display: flex;
+}
+
+#resetButton {
+    margin-left: 1vw;
+    margin-bottom: 4vh;
+    height: 16pt;
+    align-self: flex-end;
+}
+
 #section3 {
     display: flex;
     flex-direction: column;
-    justify-content: center;
 }
 
 h4 {
     text-align: center;
+    font-size: 150%;
 }
 
 #garden {
@@ -93,6 +121,18 @@ h4 {
     height: 30vh;
     width: 40vw;
     border-radius: 20px 20px 20px 20px;
+    display: grid;
+    grid-template-rows: 1fr 1fr;
 }
 
+p {
+    text-align: center;
+}
 
+#sky {
+    align-self:flex-start;
+}
+
+#landscape {
+    align-self: flex-end;
+}
