--- a/styles/index.css
+++ b/styles/index.css
@@ -21,5 +21,83 @@
 body {
   background-color: var(--bg-color);
   color: var(--txt-color);
-  font-family: firaCodeRegular;
+  font-family: firaCodeRegular, monospace;
+  text-align: center;
 }
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+h1 {
+  color: var(--h1-color);
+  font-size: 3em;
+}
+
+h2 {
+  color: var(--h2-color);
+  font-size: 2.5em;
+}
+
+p, label, select, input, button {
+  font-size: 1.5em;
+}
+
+#current-temp {
+  font-size: 2em;
+  margin: 0;
+}
+
+label {
+  display: block;
+  margin-bottom: 1%;
+}
+
+input {
+  width: 50%;
+}
+
+.controls-container {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.controls, .garden {
+  background-color: var(--secondary-bg-color);
+  border-radius: 1em;
+  min-width: 290px;
+  margin: 1em auto;
+  padding: 1%;
+}
+
+.controls {
+  width: 30%;
+}
+
+.garden {
+  width: 60%;
+}
+
+.hot {
+  color: var(--hot-temp);
+}
+
+.warm {
+  color: var(--warm-temp);
+}
+
+.mid {
+  color: var(--mid-temp);
+}
+
+.cool {
+  color: var(--cool-temp);
+}
+
+.cold {
+  color: var(--cold-temp);
+}
+
