finish styling input, select, buttons

--- a/styles/index.css
+++ b/styles/index.css
@@ -14,7 +14,6 @@
   --mid-temp: #f1fa8c;
   --cool-temp: #50fa7b;
   --cold-temp: #8be9fd;
-  --btn-bg-color: #6272a4;
   --btn-txt-color: #bd93f9;
 }
 
@@ -39,16 +38,13 @@ h1 {
 h2 {
   color: var(--h2-color);
   font-size: 2.5em;
+  margin: 0.1em auto;
 }
 
 p, label, select, input, button {
   font-size: 1.5em;
 }
 
-#current-temp {
-  font-size: 2em;
-  margin: 0;
-}
 
 label {
   display: block;
@@ -56,7 +52,26 @@ label {
 }
 
 input {
-  width: 50%;
+  width: 40%;
+}
+
+button, select, input {
+  color: var(--btn-txt-color);
+  background-color: var(--bg-color);
+  border: none;
+  padding: 0.5em 1em;
+  border-radius: 0.75em;
+  font-family: inherit;
+}
+
+button:hover {
+  cursor: pointer;
+  color: var(--bg-color);
+  background-color: var(--btn-txt-color);
+}
+
+select:hover {
+  cursor: pointer;
 }
 
 .controls-container {
@@ -68,17 +83,23 @@ input {
 .controls, .garden {
   background-color: var(--secondary-bg-color);
   border-radius: 1em;
-  min-width: 290px;
   margin: 1em auto;
   padding: 1%;
 }
 
 .controls {
   width: 30%;
+  min-width: 290px;
 }
 
 .garden {
   width: 60%;
+  min-width: fit-content;
+}
+
+.garden p {
+  font-size: 2em;
+  white-space: nowrap;
 }
 
 .hot {
@@ -101,3 +122,7 @@ input {
   color: var(--cold-temp);
 }
 
+#current-temp {
+  font-size: 2em;
+  margin: 0;
+}
