--- a/styles/index.css
+++ b/styles/index.css
@@ -25,6 +25,9 @@ h2 {
 }
 */
 
+/* 
+SKY BOX
+*/
 
 .sky-color {
     height: 90%;
@@ -58,3 +61,19 @@ h2 {
     width: 10vw;
 } 
 
+
+/* 
+WEATHER CONTROL
+*/
+#temp-container {
+    display: flex;
+}
+
+.temp-gauge {
+    background: transparent;
+}
+
+#temperature {
+    background-color: aqua;
+    inline-size: 5vw;
+}
