--- a/styles/index.css
+++ b/styles/index.css
@@ -20,7 +20,15 @@ body {
 section {
     background: white;
     border-radius: 1em;
-    padding: 0 1em;
+    padding: .5em 1em;
+}
+
+button {
+    /* height: 2em;
+    width: 2em; */
+    background-color: transparent;
+    border-style: none;
+    border-radius: 50%;
 }
 
 /**************/
@@ -45,28 +53,51 @@ section {
 #temperature-block {
     grid-column: 1;
     grid-row: 2;
+    background-color: yellow;
+
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+}
+
+#heading-temp {
+    grid-column: 1 / span 3;
 }
 
 #temp {
-    color: orange;
+    grid-column: 1 / span 2;
+    grid-row: 2 / span 2;
+    font-size: 3em;
+    text-align: center;
+    vertical-align: middle;
+}
+
+#up-arrow-button {
+    grid-column: 3;
+    grid-row: 2;
 }
 
 #up-arrow {
     /* Syling credit: https://css-tricks.com/snippets/css/css-triangle/ */
     width: 0px;
     height: 0px;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-bottom: 10px solid black;
+    border-left: .5em solid transparent;
+    border-right: .5em solid transparent;
+    border-bottom: 1em solid black;
 }
   
+#down-arrow-button {
+    grid-column: 3;
+    grid-row: 3;
+}
+
 #down-arrow {
     /* Syling credit: https://css-tricks.com/snippets/css/css-triangle/ */
     width: 0px;
     height: 0px;
-    border-left: 5px solid transparent;
-    border-right: 5px solid transparent;
-    border-top: 10px solid black;
+    border-left: .5em solid transparent;
+    border-right: .5em solid transparent;
+    border-top: 1em solid black;
 }
 
 /*****************/
