add flex layout to weather garden display

--- a/styles/index.css
+++ b/styles/index.css
@@ -41,10 +41,9 @@ Hot number color: #EA0009 */
 } */
 .main {
     grid-area: main;
-    display: grid;
-    grid-template-columns: 1fr, 1fr, 1fr;
-    grid-template-rows: 1fr, 1fr, 1fr;
+    display: flex;
     justify-content: center;
+    align-items: center;
 }
 
 .deets {
