--- a/styles/index.css
+++ b/styles/index.css
@@ -3,6 +3,13 @@
     --midday: rgb(9, 154, 238);
     --sunset:linear-gradient(180deg, rgb(0, 27, 51) 0%, rgb(0, 94, 138) 50%, rgb(241, 135, 14) 80%, rgb(243, 116, 190) 100%) ;
     --midnight:rgb(1,1,1);
+    --curved-rad: 16px;
+    --curved-padding: 10px;
+    --fill-in: rgb(10, 0, 0);
+}
+
+::placeholder {
+    color: var(--fill-in);
 }
 
 h1 {
@@ -24,6 +31,8 @@ CITY
 .frosted {
     background: rgba(243, 234, 234, 0.308);;
     backdrop-filter: blur(30px);
+    border-radius: var(--curved-rad);
+    padding: var(--curved-padding);
 }
 
 #city-container {
@@ -34,7 +43,10 @@ CITY
 }
 
 #city-name-container {
-    margin: auto;   
+    margin: auto;
+    background: white;
+    border-radius: var(--curved-rad);
+    padding: var(--curved-padding);
 }
 
 #city-name {
@@ -44,6 +56,12 @@ CITY
     border: hidden;
 }
 
+#reset-city-button {
+    border: hidden;
+    border-radius: var(--curved-rad);
+    padding: var(--curved-padding);
+    
+}
 /* 
 SKY BOX
 */
@@ -85,6 +103,7 @@ WEATHER CONTROL
 */
 #temp-container {
     display: flex;
+    margin: 0 auto;
 }
 
 .temp-gauge {
