refactor playground / landscape; add colors to temp gauge

--- a/styles/index.css
+++ b/styles/index.css
@@ -90,8 +90,9 @@ LANDSCAPE
 }
 
 #landscape {
-    /*background: var(--morning);*/
+    background: var(--morning);
     flex: 80;
+    text-align: center;
 }
 
 
