--- a/styles/index.css
+++ b/styles/index.css
@@ -1,3 +1,56 @@
 body {
     background-color: teal;
+    display: grid;
+    grid-template: 25% 25% 25% 25%/ 50% 50%;
+    gap: 10px;
+}
+#titleGreeting{
+    background-color: rgb(238, 238, 167);
+    grid-row: auto;
+    grid-column: span 3;
+    align-items: center;
+    display: flex;
+    gap: 20px;
+    
+}
+#changeCityName{
+    background-color: rgb(238, 238, 167);
+    grid-row: 2;
+    grid-column: 2;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+#tempAdjuster{
+    background-color: rgb(238, 238, 167);
+    grid-row: 3;
+    grid-column: 2;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+#skySection{
+    background-color: rgb(238, 238, 167);
+    grid-row: 4;
+    grid-column: 2;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    
+}
+#landscape{
+    background-color: rgb(238, 238, 167);
+    grid-row: 3;
+    grid-column: 1;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
 }
