--- a/styles/index.css
+++ b/styles/index.css
@@ -42,6 +42,25 @@ section:nth-of-type(3){
     background-color: darkseagreen;
 }
 
+.freezing{
+    color: blue;
+}
+.cold{
+    color: green;
+}
+.warm{
+    color: yellow;
+}
+.hot{
+    color: orange;
+}
+.scorching{
+    color: red;
+}
+
+
+
+
 /*
 .container{
 
