--- a/styles/index.css
+++ b/styles/index.css
@@ -14,3 +14,49 @@ h1 {
   color: whitesmoke;
   padding-top: 50px;
 }
+
+#main-container {
+  display: flex;
+  justify-content: space-around;
+  width: auto;
+}
+
+#temp-arrow {
+  margin-bottom: 25px;
+  /* padding-bottom: 15px; */
+}
+
+img {
+  display: block;
+  width: 80%;
+  margin-left: 30px;
+  padding-bottom: 15px;
+}
+
+.background {
+  background-color: white;
+  width: 300px;
+  height: 400px;
+  text-align: center;
+  color: rgb(71, 71, 71);
+  border-radius: 10px;
+}
+
+#date-time {
+  font-weight: bold;
+}
+
+#temp-number {
+  font-size: 2.5rem;
+}
+select {
+  margin-top: 40px;
+}
+
+.input-margin {
+  margin-top: 40px;
+}
+
+#layout-image {
+  margin-top: 70px;
+}
