--- a/styles/index.css
+++ b/styles/index.css
@@ -1,18 +1,7 @@
-
-
 body {
 background-color: blue;
 color: white;
 }
-
-/* .card {
-    background-color: lightblue;
-    border-radius: 15px;
-    width: 300px;
-    height:200px;
-    margin: 20px;
-} */
-
 .container {
     display: grid;
     grid-template-columns:2fr 4fr;
@@ -25,8 +14,13 @@ color: white;
     align-items: center;
     text-align: center;
 }
+/* header */
 .header_block {
     grid-area: header_block
+}
+.header_h1{
+    font-size: 3rem;
+    margin-right: 10px;
 }
 /* temperature */
 .temperature {
@@ -51,24 +45,6 @@ color: white;
 .sky {
     grid-area: sky
 }
-.city {
-    grid-area: city
-}
-.weather {
-    grid-area: weather;
-    /* justify-self: center; */
-    /* align-self: center; */
-}
-
-.header_h1{
-    font-size: 3rem;
-    margin-right: 10px;
-}
-#city-name {
-    margin-left: 10px;
-    font-size: 2rem;
-    font-style: italic;
-}
 .bg_br{
     color: black;
     background-color: white;
@@ -78,12 +54,26 @@ color: white;
     width: 80%;
 
 }
+/* city */
+.city {
+    grid-area: city
+}
+#city-name {
+    margin-left: 10px;
+    font-size: 2rem;
+    font-style: italic;
+}
+/* weather */
+.weather {
+    grid-area: weather;
+}
+
 .weather_content {
     background-color: lightblue;
     padding: 2rem;
     border-radius: 10px;
     width: 80%;
-    height: 10rem;
+    height: 12rem;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -91,7 +81,8 @@ color: white;
 
 }
 .weather_sky {
+    font-size: 2rem;
 }
 .weather_garden {
-
+    font-size: 2rem;
 }
