--- a/styles/index.css
+++ b/styles/index.css
@@ -1,29 +1,9 @@
-
-/* 
-#F5AB99
-
-Tropical Pink
-
-#FEB47B
-
-Liquid Sunset
-
-#FF7E5F
-
-Heatwave
-
-#765285
-
-Paradise
-
-#351C4D
-
-Nightfall */
-
 * {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: skyblue;
+    /* background: ('../assets/clouds.jpg') */
 } 
+
 .container {
     display: grid;
     height: 100vh;
@@ -32,29 +12,76 @@ Nightfall */
     grid-gap: 1rem;
 }
 
-#title {
+main {
     background-color: white;
     border-radius: 25px;
-    grid-row: 1 / 3;
+    grid-row: 1 / 4;
     grid-column: 3 / 8;
     display: flex;  
     justify-content: center; 
     align-items: center;
-    font-size: 90%;
     padding: 10px;
+
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
 }
 
-#snacks {
+main h1 {
     background-color: white;
-    border-radius: 25px;
-    grid-row: 3 / 6;
-    grid-column: 1 / 10;
-    display: flex;  
+    grid-row: 1/2;
+    grid-column: 1/4;
+    display: flex;
+    justify-content: center; 
+}
+
+main h3 {
+    background-color: white;
+    grid-row: 2/4;
+    grid-column: 1/4;
+    display: flex;
+    justify-content: center; 
+}
+
+.emoji-section {
+    background-color: white;
+    border-radius: 30px;
+    padding: 10px;
+    grid-row: 4 / 6;
+    grid-column: 2/9;
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
+}
+
+#sky-container{
+    grid-row: 1/2;
+    grid-column: 1/4;
+    background-color: white;
+    display: flex;
     justify-content: center; 
     align-items: center;
 }
 
-.temperature-area {
+#snack-option-emojis {
+    grid-row: 2/3;
+    grid-column: 1/4;
+    background-color: white;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+}
+
+#temp-option-emojis {
+    grid-row: 3/4;
+    grid-column: 1/4;
+    background-color: white;
+    display: flex;
+    justify-content: center; 
+    align-items: center;
+}
+
+.temperature-section {
     background-color: white;
     height: 200px;
     border-radius: 15px 50px;
@@ -121,12 +148,10 @@ Nightfall */
 #sky-heading {
     background-color: white;
     grid-row: 6/9;
-    grid-column: 3/5;
+    grid-column: 4/6;
     display: flex;
     align-items: center;
-    /* padding: 30px; */
     font-size: 170%;
-    grid-column: 2/7;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -134,15 +159,19 @@ Nightfall */
 
 #drop-down {
     background-color: white;
-    grid-row: 2/5;
+    grid-row: 4/5;
     grid-column: 1/10;
     display: flex;
     align-items: center;
-    font-size: 170%;
-    grid-column: 2/7;
+    font-size: 90%;
+    grid-column: 3/7;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+option {
+    background-color: white;
 }
 
 .city-area {
