--- a/styles/index.css
+++ b/styles/index.css
@@ -1,9 +1,7 @@
 * {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     background-color: skyblue;
-    /* background: ('../assets/clouds.jpg') */
 } 
-
 .container {
     display: grid;
     height: 100vh;
@@ -15,7 +13,7 @@
 main {
     background-color: white;
     border-radius: 25px;
-    grid-row: 1 / 4;
+    grid-row: 2 / 4;
     grid-column: 3 / 8;
     display: flex;  
     justify-content: center; 
@@ -112,6 +110,7 @@ main h3 {
     grid-row: 2/7;
     grid-column: 5/6;
     font-size: 350%;
+    color: orange;
 }
 
 #increase-temp {
