--- a/styles/index.css
+++ b/styles/index.css
@@ -7,12 +7,26 @@ body{
 }
 
 
-
 header h1{
-    font-size:80px;
+    display: inline-block;
+    font-size:500%;
     margin-left: 10%;
     margin-bottom: 0%;
+    
 }
+header h2{
+    display: inline-block;
+    font-size: 100%;
+    margin-left: 60%;
+    margin-right: 2%;
+    font-weight: normal;
+}
+.city-display{
+    font-size:200%;
+    display: inline-block;
+    
+}
+
 
 footer {
     background: #0d1321;
@@ -76,29 +90,29 @@ footer {
 
 
 #temperature-value{
-    font-size:400%;
+    font-size:500%;
     text-align: center;
     margin-left: 3%;
     margin-right: 3%;
     margin-top: 10%;
 }
 
-form input[type="reset"]{
+form button[type="button"]{
     background-color: #f0ebd8; 
     font-size: 80%;
     margin-top: 10%;
     color: #1d2d44;
     font-weight: bold;
     border-color:#f0ebd8;
-    border-radius: 15px;
-    height: 30%;
+    border-radius: 10px;
+    height: 25%;
     width: 20%;
 }
 
 form input[type="text"]{
     height: 15%;
     width: 50%;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 
 form label, span{
@@ -111,7 +125,7 @@ form label, span{
     margin-top: 10%;
     font-size: 120%;
     color: #1d2d44;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 
 
