--- a/styles/index.css
+++ b/styles/index.css
@@ -25,6 +25,10 @@ main {
     grid-template-columns: 1fr 1fr 1fr;
 }
 
+#city-name{
+    background-color: white;
+}
+
 main h1 {
     background-color: white;
     grid-row: 1/2;
@@ -199,15 +203,35 @@ option {
     font-size: 170%;
 }
 
-#city-search{
+#city-search-label{
     background-color: white;
-    grid-row: 2/5;
-    grid-column: 1/10;
-    display: flex;
-    align-items: center;
-    font-size: 170%;
-    grid-column: 2/7;
+    grid-row: 2/4;
+    grid-column: 2/8;
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+#city-search-input{
+    background-color: white;
+    grid-row: 4/5;
+    display: flex;
+    align-items: center;
+    /* font-size: 170%; */
+    grid-column: 3/6;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#resetButton{
+    background-color: white;
+    border-radius: 50px;
+    font-family:Georgia, 'Times New Roman', Times, serif;
+    cursor: pointer;
+
+    display: flex;
+    grid-row: 4/5;
+    grid-column: 6/7;
+    margin-left: 10px;
 }
