--- a/styles/index.css
+++ b/styles/index.css
@@ -20,7 +20,7 @@ h1 {
   color: white;
   border: 8px solid white;
   padding: 16px 12px;
-  width: 70%;
+
   display: inline-block;
   border-radius: 34px;
   background-image: linear-gradient(rgb(148, 171, 247), rgb(153, 170, 189));
@@ -33,6 +33,16 @@ h1 {
     50px 50px 50px 0px rgba(66, 62, 62, 0.25);
   padding: 4rem 2rem;
   display: block;
+}
+
+#temp-button {
+  background: rgb(246, 247, 248);
+  border-radius: 0.5rem;
+  box-shadow: -2px -2px 4px 0px #ffffff,
+    50px 50px 50px 0px rgba(66, 62, 62, 0.25);
+  padding: 0.5rem 0.25rem;
+  margin-right: 10px;
+  color: black;
 }
 .city-container {
   width: 40%;
@@ -59,10 +69,5 @@ h1 {
 .temp-container {
   width: 40%;
   height: 100px;
-  background-color: black;
   border-radius: 0 0 8px 8px;
-  padding: 16px 12px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
