--- a/styles/index.css
+++ b/styles/index.css
@@ -11,6 +11,9 @@ body {
     align-items: center;
     display: flex;
     gap: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 }
 #changeCityName{
@@ -21,6 +24,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     
 }
 #tempAdjuster{
@@ -31,6 +35,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
     
 }
 #skySection{
