--- a/styles/index.css
+++ b/styles/index.css
@@ -11,7 +11,8 @@ body {
     flex-direction: column;
     align-items: center;
     background: linear-gradient(rgb(47,150,163), rgb(48,16,143));
-    font-family: sans-serif;
+    font-family: 'IBM Plex Mono', monospace;
+    font-family: 'Syncopate', sans-serif;
     color: white;
 
 }
