--- a/styles/index.css
+++ b/styles/index.css
@@ -1,5 +1,9 @@
+body {
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
 h1 {
-    font-size: 50px;
+    font-size: 40px;
 }
 
 .tempDefault {
