adds rudimentary incrimental temperature counter

--- a/styles/index.css
+++ b/styles/index.css
@@ -2,20 +2,22 @@
     background-color: #7128a2;
     text-align: center;
     font-size: large;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
+    display:grid;
     vertical-align: middle;
     align-content:center;
+    grid-gap: 20px;
+    list-style-type: none;
 }
 
-.big-container {
-    /* these are just an arbitrary widths and heights to look good on our browser */
+.weather-garden-box {
+    display:grid;
     width: 800px;
-    height: 300px;
+    height: 400px;
     vertical-align: middle;
     align-content:center;
     background-color: #b88fd3;
+    grid-gap:20px;
+    list-style-type: none;
 }
 
 .day-box {
@@ -23,10 +25,88 @@
     height: 200px;
     vertical-align: middle;
     background-color: #815d99;
+    list-style-type: none;
 }
 
-.grid-container {
+.current-temp-box {
+    width: 800px;
+    height: 200px;
+    vertical-align: middle;
+    background-color:  #b88fd3;
+    list-style-type: none;
+}
+
+.week-grid-container {
     display: grid;
+    list-style-type: none;
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    list-style-type: none;
+
+}
+
+.big-text{
+    font-size:x-large;
+}
+
+.background {
+    background-color: #7128a2;
+    display:flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    vertical-align: middle;
     align-content:center;
+    list-style-type: none;
+}
+
+/* XXXX */
+
+/*apply css properties to body tag*/
+  
+body {
+    position: absolute;
+    left: 0%;
+    text-align: center;
+}
+
+/*apply css properties to container class*/
+
+.container {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 100%;
+    text-align: center;
+}
+
+/*apply css properties to button tag*/
+
+button {
+    width: 90px;
+    height: 60px;
+    font-size: 30px;
+    background-color: rgb(80, 9, 94);
+    color: honeydew;
+}
+
+/*apply hover effect to button tag*/
+
+button:hover {
+    background-color: rgb(184, 49, 94);
+    color:  rgb(80, 9, 94);
+}
+
+/*apply css properties to h2 tag*/
+
+h2 {
+    color: rgb(80, 9, 94);
+    margin: 0 50px;
+    font-size: 45px;
+}
+/*apply css properties to h1 tag*/
+
+h1 {
+    font-size: 35px;
+    color:  rgb(80, 9, 94);
+    text-align: center;
+
 }
