--- a/styles/index.css
+++ b/styles/index.css
@@ -153,16 +153,15 @@ main {
     background-clip: border-box;
     background-repeat: no-repeat;
     background-size: cover;
-    height: calc(100vh - 190px);
+    height: calc(100vh - 150px);
     z-index: -100;
 }
 
-.landscape{
-    height: 30vh; 
+#landscape-image{
+    width:200px;
     bottom:30px;
-    position:absolute; 
+    position:relative; 
     z-index: 100;
-    width:100%;
     color:red;   
 }
 
@@ -175,6 +174,7 @@ main {
 }
 
 .form-rounded-button {
+    height:3rem;
     background: #1E62D0;
     background-image: -webkit-linear-gradient(top, #1E62D0, #3D94F6);
     background-image: -moz-linear-gradient(top, #1E62D0, #3D94F6);
@@ -201,9 +201,43 @@ main {
  }
  
  .form-rounded-button:hover {
-
+    height:3rem;
+    background: #1E62D0;
+    background-image: -webkit-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -moz-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -ms-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -o-linear-gradient(top, #3D94F6, #1E62D0);
+    background-image: -webkit-gradient(top, #3D94F6, #1E62D0);
+    -webkit-border-radius: .5rem;
+    -moz-border-radius: .5rem;
+    border-radius: .5rem;
+    color: #FFFFFF;
+    font-family: Brush Script MT;
+    font-size: 18px;
+    font-weight: 100;
+    -webkit-box-shadow: 1px 1px 20px 0 #000000;
+    -moz-box-shadow: 1px 1px 20px 0 #000000;
+    box-shadow: 1px 1px 20px 0 #000000;
+    text-shadow: 1px 1px 20px #000000;
+    border: solid #337FED 1px;
+    text-decoration: none;
+    display: inline-block;
+    cursor: pointer;
+    text-align: center;
+    align-items: center;
  }
 
  .theMainText {
     text-shadow: 5px 5px 2px black;
+    z-index: 1000;
+    position:relative;
  }
+
+
+ .landscape-city-holder{
+    text-align: center;
+ }
+
+.landscape-uber-holder{
+    text-align: center;
+}
